--- a/src/css/geely-reservation.css
+++ b/src/css/geely-reservation.css
@@ -5,5 +5,44 @@
 .collectList{
     width:90%;
     margin:1rem auto;
+}
+.carbox{
     border:1px solid #ccc;
+    position:relative;
+}
+.carbox .carimg{
+    width:100%;
+    text-align:center;
+}
+.carbox .carimg img{
+    width:80%;
+    justify-content: space-around;
+}
+.time{
+    width:100%;
+    background:rgb(0, 136, 214);
+}
+.time p{
+    padding:0.4rem;
+    text-align:center;
+    font-size:1.4rem;
+    font-weight: bold;
+    color:white;
+}
+.ctitle{
+    width:100%;
+
+}
+.ctitle p{
+    font-size:1.2rem;
+    margin:0.5rem 0.3rem;
+
+}
+.remove{
+    position: absolute;
+    top:0.1rem;
+    right:0.1rem;
+}
+.remove i{
+    font-size:2rem;
 }
